KMS APIS